# Mello

./: .env.example  .gitignore  Anchor.toml  CONTRIBUTING.md  LICENSE  README.md  index.html  package-lock.json  package.json  vercel.json  vite.config.ts
api/: [...].ts  index.js
docs/: architecture.md  pda-structure.md  smart-contract-flow.md
programs/mellocoin_protocol/: Cargo.toml
programs/mellocoin_protocol/src/: lib.rs
scripts/: deploy-devnet.sh  local-validator.sh
src/: routeTree.gen.ts  styles.css
src/components/: ClientOnly.tsx  NavBar.tsx
src/components/evm/: WagmiProvider.tsx
src/components/solana/: SolanaProviders.tsx  WalletButton.tsx
src/lib/: error-capture.ts  solana.ts  wallet-hooks.ts
src/routes/: __root.tsx  bridge.tsx  dashboard.tsx  escrow.tsx  index.tsx  pay.tsx  routes.tsx  settings.tsx  tip.$slug.tsx  tip.tsx
tests/: mellocoin_protocol.ts
