[package]
name = "mellocoin_protocol"
version = "0.1.0"
description = "Mellocoin — conversational Solana payments protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "mellocoin_protocol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = "0.30.1"
